Finish microservice controllers and tests
